@@ -1,5 +1,9 @@
 2005-05-03  Nathaniel Smith  <njs@codesourcery.com>
 
+	* netsync.cc (load_epoch): Remove unused function.
+
+2005-05-03  Nathaniel Smith  <njs@codesourcery.com>
+
 	* UPGRADE: Fix version number.
 
 2005-05-03  Nathaniel Smith  <njs@codesourcery.com>
